# raylib-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon  setup.sh  setup_deps.sh
build_scripts/: download_raylib.py  first_run.py
src/: main.c
